--- a/style.css
+++ b/style.css
@@ -375,25 +375,29 @@ footer {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  gap: 2rem;
+  gap: 3rem;
+  
 }
 
 footer a {
   font-family: 'Questrial', sans-serif;
   color: var(--white);
   font-size: 22px;
+  margin-top: 2rem;
 }
 
 footer p {
   color: var(--white);
 }
 
-fieldset {
+
+.field {
   color: var(--white);
   border: none;
   display: flex;
   flex-direction: column;
   font-size: 24px;
+  
 }
 legend {
   font-family: 'Questrial', sans-serif;
@@ -423,7 +427,7 @@ legend {
 .sub-btn {
   background-color: transparent;
   border: 2px solid var(--white);
-  padding: 1rem 2rem;
+  padding: .5rem 1rem;
   color: var(--white);
   font-family: 'Raleway', sans-serif;
   
